added buttons to navigate between pages

--- a/404.html
+++ b/404.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found</title>
+    <style>
+    body {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    h1 {
+       text-align: center; 
+    }
+</style>
 </head>
 <body>
     <h1>Nothing here!</h1>
-    
+    <a href="http://localhost:8080/"><button class="btn">Home</button></a>
 </body>
 </html>
