refactored to use express

--- a/contactMe.html
+++ b/contactMe.html
@@ -31,7 +31,7 @@
     <h1>Contact Me</h1>
     <div id="btnCtr">
         <a href="http://localhost:8080/"><button class="btn">Home</button></a>
-        <a href="http://localhost:8080/about"><button class="btn">Contact Me</button></a>
+        <a href="http://localhost:8080/about"><button class="btn">About</button></a>
     </div>
 </body>
 </html>
