--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1>Homepage</h1>
     <div id="btnCtr">
         <a href="http://localhost:8080/about"><button id="about" class="btn">About</button></a>
-        <button id="contactMe" class="btn">Contact Me</button>
+        <a href="http://localhost:8080/contact"><button id="contactMe" class="btn">Contact Me</button></a>
     </div>
 </body>
 </html>
